[package]
name = "empty_stream_error"
version = "0.1.0"
authors = ["Elrendio <oscar@stockly.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.1.3"
futures = "0.1.28"
grpcio = { version = "0.4.4", features = ["openssl"] }
protobuf = "2.7.0"

[build-dependencies]
protoc-grpcio = "1.0.2"
protobuf-codegen = "2.8.1"
